--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,22 +3,21 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 20px;
 }
 ::-webkit-scrollbar-track {
-  margin-top: 5px;
-  margin-bottom: 5px;
   background-image: linear-gradient(
     180deg,
     var(--secondary),
-    var(--primary),
+    var(--tertiary),
+    var(--tertiary),
     var(--secondary)
   );
-  border-radius: 4px;
+  /* border-radius: 4px; */
 }
 ::-webkit-scrollbar-thumb {
   background-color: var(--primary);
-  border-radius: 4px;
+  border-radius: 20px;
 }
 
 :root {
