--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -2,6 +2,18 @@
   background: linear-gradient(90deg, var(--secondary) 0%, var(--primary) 45%);
 }
 
+@media (max-width: 986px) {
+  .navbar_container {
+    width: 75%;
+  }
+}
+
+@media (max-width: 543px) {
+  .navbar_container {
+    width: 100%;
+  }
+}
+
 .mysaved {
   border: 1px solid var(--color-white);
 }
